disable donate and e-book collections

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     </div>
   </div>
 <div class="d-grid mt-5">
-  <a href="WeBuild/index.html" class="btn btn-outline-light btn-primary hvr-shadow" role="button" target="_blank"><i class="fab bi-book">&nbsp;</i>E-book Collections</a>
+<!--   <a href="WeBuild/index.html" class="btn btn-outline-light btn-primary hvr-shadow" role="button" target="_blank"><i class="fab bi-book">&nbsp;</i>E-book Collections</a> -->
   <br>
   <a href="https://github.com/arifnurrizqi" class="btn btn-outline-light btn-primary hvr-shadow " role="button" target="_blank"><i class="fab bi-github">&nbsp;</i>Github</a>
   <br>
@@ -79,7 +79,7 @@
   <br>
   <a href="https://t.me/arifnurrizqi" class="btn btn-outline-light btn-primary hvr-shadow " role="button" target="_blank"><i class="fab bi-telegram">&nbsp;</i>Telegram</a>
   <br>
-  <a href="https://saweria.co/arnur" class="btn btn-outline-light btn-primary hvr-shadow " role="button" target="_blank"><i class="fab bi-wallet2">&nbsp;</i>Buy Me Coffee</a>
+<!--   <a href="https://saweria.co/arnur" class="btn btn-outline-light btn-primary hvr-shadow " role="button" target="_blank"><i class="fab bi-wallet2">&nbsp;</i>Buy Me Coffee</a> -->
 </div>
         <!--------------------Footer---------------------------->
   <div class="footer mt-5">
