--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <hr/>
     <h6>Made With <span class="love">♥</span> in Purwokerto, Indonesia</h6>
     <div class="copyright">
-      &copy; 2021 <strong><span>Arif Nur Rizqi</span></strong> . All Rights Reserved
+      &copy; 2021 <strong><span>Arif Nur Rizqi</span></strong> • All Rights Reserved
     </div>
   </div>
 </div>
