--- a/index.html
+++ b/index.html
@@ -1,95 +1,244 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <link rel="shortcut icon" href="img/IMG_20210116_104425.jpg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <!-- <meta name="theme-color" content="#343a40" /> -->
-  <meta
-          name="description"
-          content="Links To My Accounts | Developed By - Arif Nur Rizqi"
-  />  
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-     <title>Links - Arif Nur Rizqi</title>
-     <style>
-       body{
-         background: linear-gradient(#0d6efd, #6dd5ed) !important;
-       }
-       h5{
-            color: #000000;
-       }
-       .name{
-           color: #000000;
-       }
-       .love{
-           color: #ff0000 !important;
-       }    
-       .footer{
-           margin-top: 5% !important;
-           margin-bottom: 30px;
-       }
-       .hvr-shadow {
-          display: inline-block;
-          vertical-align: middle;
-          -webkit-transform: perspective(1px) translateZ(0);
-          transform: perspective(1px) translateZ(0);
-          box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-          -webkit-transition-duration: 0.2s;
-          transition-duration: 0.2s;
-          -webkit-transition-property: box-shadow;
-          transition-property: box-shadow;
-        }
-        .hvr-shadow:hover, .hvr-shadow:focus, .hvr-shadow:active {
-          box-shadow: 0 10px 10px -10px rgba(0, 0, 0, 0.5);
-        }
-       @media (max-width: 479px) {
-            .footer{
-            margin-top: 35% !important;
-            }
-       }
-       img {
-         pointer-events: none;
-       }
-       border-white{
-         border: 20px !important;
-       }
-     </style>
-</head>
-<body>
-<div class="container text-center">
-  <div class="media mt-5">
-    <img src="img/IMG_20210116_104425.jpg" class="rounded-circle m-3 border border-white" alt="image" width="80px" height="80px">
-    <div class="media-body m-2">
-      <h5 class="align-items-center mt-2">@aarrnnuurr</h5>
-      <p>Hello!
-      I am Arif Nur Rizqi</p>
-    </div>
-  </div>
-<div class="d-grid mt-5">
-<!--   <a href="WeBuild/index.html" class="btn btn-outline-light btn-primary hvr-shadow" role="button" target="_blank"><i class="fab bi-book">&nbsp;</i>E-book Collections</a> -->
-  <br>
-  <a href="https://github.com/arifnurrizqi" class="btn btn-outline-light btn-primary hvr-shadow " role="button" target="_blank"><i class="fab bi-github">&nbsp;</i>Github</a>
-  <br>
-  <a href="https://www.instagram.com/aarrnnuurr/" class="btn btn-outline-light btn-primary hvr-shadow " role="button" target="_blank"><i class="fab bi-instagram">&nbsp;</i>Instagram</a>
-  <br>
-  <a href="error.html" class="btn btn-outline-light btn-primary hvr-shadow" role="button" target="_blank"><i class="fab bi-globe">&nbsp;</i>Official Website</a>
-  <br>
-  <a href="https://twitter.com/arifnurrizqi" class="btn btn-outline-light btn-primary hvr-shadow " role="button" target="_blank"><i class="fab bi-twitter">&nbsp;</i>Twitter</a>
-  <br>
-  <a href="https://t.me/arifnurrizqi" class="btn btn-outline-light btn-primary hvr-shadow " role="button" target="_blank"><i class="fab bi-telegram">&nbsp;</i>Telegram</a>
-  <br>
-<!--   <a href="https://saweria.co/arnur" class="btn btn-outline-light btn-primary hvr-shadow " role="button" target="_blank"><i class="fab bi-wallet2">&nbsp;</i>Buy Me Coffee</a> -->
-</div>
-        <!--------------------Footer---------------------------->
-  <div class="footer mt-5">
-    <hr/>
-    <h6>Made With <span class="love">♥</span> in Purwokerto, Indonesia</h6>
-    <div class="copyright">
-      &copy; 2021 <strong><span>Arif Nur Rizqi</span></strong> • All Rights Reserved
-    </div>
-  </div>
-</div>
-</body>
+<html lang="en" class="scroll-smooth">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Creative Linktree</title>
+		<script src="https://cdn.tailwindcss.com"></script>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+		/>
+		<style>
+			@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
+			body {
+				font-family: "Poppins", sans-serif;
+				background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
+				min-height: 100vh;
+				transition: background 0.3s ease;
+			}
+
+			.dark body {
+				background: linear-gradient(135deg, #1a1a2e, #16213e);
+				color: white;
+			}
+
+			.link-card {
+				transition: transform 0.3s ease, box-shadow 0.3s ease;
+			}
+
+			.link-card:hover {
+				transform: translateY(-4px) scale(1.02);
+				box-shadow: 0 12px 24px -6px rgba(0, 0, 0, 0.1);
+			}
+
+			.profile-pic {
+				border: 4px solid white;
+				box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+			}
+
+			.ripple {
+				position: relative;
+				overflow: hidden;
+			}
+
+			.ripple-effect {
+				position: absolute;
+				width: 100px;
+				height: 100px;
+				background: rgba(255, 255, 255, 0.5);
+				border-radius: 9999px;
+				transform: scale(0);
+				animation: ripple 0.6s linear;
+				pointer-events: none;
+				z-index: 10;
+			}
+
+			@keyframes ripple {
+				to {
+					transform: scale(4);
+					opacity: 0;
+				}
+			}
+		</style>
+		<script src="https://cdn.tailwindcss.com"></script>
+		<script>
+			tailwind.config = {
+				darkMode: "class",
+			};
+		</script>
+	</head>
+	<body
+		class="flex items-center justify-center p-4 transition-colors duration-300"
+	>
+		<div class="w-full max-w-md mx-auto">
+			<!-- Theme Toggle -->
+			<div class="flex justify-end">
+				<button
+					id="themeToggle"
+					class="theme-toggle py-2 px-3 rounded-full bg-white dark:bg-gray-800 shadow-md"
+				>
+					<i class="fas fa-moon text-gray-700 dark:text-yellow-300"></i>
+				</button>
+			</div>
+
+			<!-- Profile Section -->
+			<div class="text-center mb-8">
+				<img
+					src="./img/profile.jpg"
+					alt="Profile"
+					class="profile-pic w-24 h-24 rounded-full mx-auto mb-4 object-cover"
+				/>
+				<h1 class="text-2xl font-bold text-gray-800 dark:text-white">
+					@arifnur.rizqi
+				</h1>
+				<p class="text-gray-600 dark:text-white mt-2">
+					Electrical Engineer 🎓 | R&D Support | IoT, Instrumentation &
+					Automation Enthusiast
+				</p>
+			</div>
+
+			<!-- Links Container -->
+			<div class="space-y-4 mb-8" id="linksContainer"></div>
+
+			<!-- Social Links -->
+			<div class="flex space-x-4 justify-center">
+				<a
+					href="https://www.linkedin.com/in/arifnurrizqi/"
+					target="_blank"
+					class="link-card bg-blue-500 hover:bg-blue-700 text-white px-3 py-2 rounded-full transition shadow-md"
+				>
+					<i class="fab fa-linkedin-in text-lg"></i>
+				</a>
+				<a
+					href="https://github.com/arifnurrizqi"
+					target="_blank"
+					class="link-card bg-slate-600 hover:bg-slate-700 text-white px-3 py-2 rounded-full transition shadow-md"
+				>
+					<i class="fab fa-github text-lg"></i>
+				</a>
+				<a
+					href="https://www.instagram.com/arifnur.rizqi/"
+					target="_blank"
+					class="link-card bg-pink-500 hover:bg-pink-6 00 text-white px-3 py-2 rounded-full transition shadow-md"
+				>
+					<i class="fab fa-instagram text-lg"></i>
+				</a>
+				<a
+					href="#"
+					target="_blank"
+					class="link-card bg-blue-400 hover:bg-blue-500 text-white px-3 py-2 rounded-full transition shadow-md"
+				>
+					<i class="fab fa-twitter text-lg"></i>
+				</a>
+			</div>
+
+			<!-- Footer -->
+			<div class="text-center mt-8 text-sm text-gray-500 dark:text-gray-400">
+				<p>© 2025 Arif Nur Rizqi. All rights reserved.</p>
+			</div>
+		</div>
+
+		<script>
+			// Theme Toggle
+			const themeToggle = document.getElementById("themeToggle");
+			const icon = themeToggle.querySelector("i");
+
+			const applyTheme = (theme) => {
+				document.documentElement.classList.toggle("dark", theme === "dark");
+				icon.className =
+					theme === "dark"
+						? "fas fa-sun text-yellow-300"
+						: "fas fa-moon text-gray-700";
+			};
+
+			const storedTheme =
+				localStorage.getItem("theme") ||
+				(window.matchMedia("(prefers-color-scheme: dark)").matches
+					? "dark"
+					: "light");
+
+			applyTheme(storedTheme);
+
+			themeToggle.addEventListener("click", () => {
+				const isDark = document.documentElement.classList.toggle("dark");
+				localStorage.setItem("theme", isDark ? "dark" : "light");
+				applyTheme(isDark ? "dark" : "light");
+			});
+
+			// Dynamic Links
+			const links = [
+				{
+					title: "My Portfolio",
+					url: "https://arifnr.my.id/",
+					icon: "fa-briefcase",
+					color: "bg-blue-500",
+				},
+				{
+					title: "Latest Blog Post",
+					url: "#",
+					icon: "fa-pen-fancy",
+					color: "bg-purple-500",
+				},
+				{
+					title: "YouTube Channel",
+					url: "https://www.youtube.com/@arifnurrizqi",
+					icon: "fa-play",
+					color: "bg-red-500",
+				},
+				{
+					title: "Free Resources",
+					url: "#",
+					icon: "fa-gift",
+					color: "bg-green-500",
+				},
+				{
+					title: "Contact Me",
+					url: "https://arifnr.my.id/#contact",
+					icon: "fa-envelope",
+					color: "bg-yellow-500",
+				},
+			];
+
+			const container = document.getElementById("linksContainer");
+
+			links.forEach((link) => {
+				const a = document.createElement("a");
+				a.href = link.url;
+				a.target = "_blank";
+				a.className = `link-card flex items-center justify-between p-4 rounded-xl ${link.color} text-white ripple`;
+				a.innerHTML = `
+        <div class="flex items-center space-x-3">
+          <div class="w-8 h-8 bg-white bg-opacity-20 rounded-full flex items-center justify-center">
+            <i class="fas ${link.icon}"></i>
+          </div>
+          <span class="font-medium">${link.title}</span>
+        </div>
+        <i class="fas fa-arrow-right"></i>
+      `;
+				container.appendChild(a);
+			});
+
+			// Ripple Effect
+			document.addEventListener("click", function (e) {
+				const target = e.target.closest(".ripple");
+				if (!target) return;
+
+				const ripple = document.createElement("span");
+				const rect = target.getBoundingClientRect();
+				const size = Math.max(rect.width, rect.height);
+				const x = e.clientX - rect.left - size / 2;
+				const y = e.clientY - rect.top - size / 2;
+
+				ripple.className = "ripple-effect";
+				ripple.style.width = ripple.style.height = `${size}px`;
+				ripple.style.left = `${x}px`;
+				ripple.style.top = `${y}px`;
+
+				target.appendChild(ripple);
+				setTimeout(() => ripple.remove(), 600);
+			});
+		</script>
+	</body>
 </html>
